--- a/slides/index.html
+++ b/slides/index.html
@@ -16,6 +16,9 @@
 
     <link rel="stylesheet" href="python-repl/python-repl.css">
 
+    <!-- Fonts -->
+    <link rel='stylesheet' href='fonts/definitions.css'>
+
     <!-- Local styles -->
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/ace-brython-customization.css">
