slides: Variables: add Alice's story

--- a/slides/index.html
+++ b/slides/index.html
@@ -1462,6 +1462,92 @@
                 Isso será coberto em um momento futuro!
             </p>
         </section>
+
+
+
+        <section data-auto-animate>
+            <h3>Variáveis</h3>
+        </section>
+        <section data-auto-animate>
+            <p>
+                Suponha que Alice irá fazer uma <strong>festa do
+                    hambúrguer</strong> para seus amigos e ela precisa comprar
+                os ingredientes para o preparo.
+            </p>
+        </section>
+        <section data-auto-animate>
+            <p>
+                Nossa tarefa: escrever um programa que calcule a quantidade
+                necessária de ingredientes que Alice precisará comprar!
+            </p>
+        </section>
+        <section data-auto-animate>
+            <h4>Festa do Hambúguer</h4>
+            <p>Informações que Alice nos passou:</p>
+            <div style='
+                 font-size: .7em;
+                 display: grid;
+                 grid-auto-flow: row;
+                 justify-items: left;
+                 justify-content: center;
+                 gap: 2ex;
+                 text-align: left;
+                 background-color: #fffdf2;
+                 width: max-content;
+                 margin-left: auto;
+                 margin-right: auto;
+                 padding: 2ex;
+                 border: .6ex dotted #aaa;
+                 color: #000dd7;
+                 font-family: "Give You Glory", cursive;
+                 transform: rotate(-6deg);
+                 box-shadow: 1ex 1ex 2ex #0002;
+                 '
+            >
+                <div>Número de convidados: 42</div>
+                <div>Média de hambúrguer por convidado: 1.5</div>
+                <div>
+                    Receita para 1 hambúrguer
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>
+                                    Ingrediente
+                                </th>
+                                <th>
+                                    Quantidade
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Carne moída magra</td>
+                                <td>120 g</td>
+                            </tr>
+                            <tr>
+                                <td>Carne moída gorda</td>
+                                <td>80 g</td>
+                            </tr>
+                            <tr>
+                                <td>Queijo</td>
+                                <td>2 fatias ≃ 50 g</td>
+                            </tr>
+                            <tr>
+                                <td>Bacon</td>
+                                <td>2 fatias ≃ 30 g</td>
+                            </tr>
+                            <tr>
+                                <td>Tomate</td>
+                                <td>2 rodelas ≃ 30 g</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div style='margin-top: 2ex; text-align: right;'>
+                        Obrigada! 🙂
+                    </div>
+                </div>
+            </div>
+        </section>
       </div>
     </div>
 
