slides: use data-max-lines in python code elements

--- a/slides/index.html
+++ b/slides/index.html
@@ -271,7 +271,7 @@
             <p>
             O código abaixo é editável e executável:
             </p>
-            <div class='ace-brython'>
+            <div class='ace-brython' data-max-lines='6'>
                 <script type='text/x.ace-brython'>
                     print('edit me')
                 </script>
@@ -338,6 +338,7 @@
                 <div class='ace-brython'
                      data-id='codigo'
                      data-readonly
+                     data-max-lines='14'
                      data-components='code'
                      style='height: 14em; flex: 0; font-size: .5em;'
                  >
