slides: change some values in Alice's recipe

--- a/slides/index.html
+++ b/slides/index.html
@@ -1531,11 +1531,11 @@
                             </tr>
                             <tr>
                                 <td>Queijo</td>
-                                <td>2 fatias ≃ 50 g</td>
+                                <td>1 fatia ≃ 22 g</td>
                             </tr>
                             <tr>
                                 <td>Bacon</td>
-                                <td>2 fatias ≃ 30 g</td>
+                                <td>2 fatias ≃ 20 g</td>
                             </tr>
                             <tr>
                                 <td>Tomate</td>
