--- a/slides/index.html
+++ b/slides/index.html
@@ -1549,6 +1549,44 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div style='
+                height: var(--slide-height);
+                display: flex;
+                flex-direction: column;
+                '
+            >
+                <h4 style='flex: none;'>Nossa primeira versão do programa</h4>
+                <div class='ace-brython'
+                     style='font-size: .5em; flex: 1; margin-bottom: 2em;'
+                     data-min-lines='15'
+                     data-max-lines='20'
+                >
+                    <script type='text/x.ace-brython'>
+                        # Número de convidados: 42
+                        # Hambúrguer por convidado: 1.5
+                        # Receita
+                        #   Carne Magra: 120g
+                        #   Carne Gorda:  80g
+                        #        Queijo:  22g
+                        #         Bacon:  20g
+                        #         Tomate: 30g (2 rodelas)
+
+                        print('Olá, Alice!')
+                        print('Você precisará fazer ' + str(42 * 1.5) + ' hambúrgueres, certo?')
+                        print('Para isso, você precisará comprar:')
+                        print(str(42 * 1.5 * 120 / 1000) + ' kg de carne moída magra')
+                        print(str(42 * 1.5 * 80 / 1000) + ' kg de carne moída magra')
+                        print(str(42 * 1.5 * 22 / 1000) + ' kg de queijo')
+                        print(str(42 * 1.5 * 20 / 1000) + ' kg de bacon')
+
+                        # Vamos considerar que apenas 85% do tomate possa
+                        # ser aproveitado para fazer as rodelas
+                        print(str(42 * 1.5 * 30 / 0.85 / 1000) + ' kg de tomate')
+                    </script>
+                </div>
+            </div>
+        </section>
       </div>
     </div>
 
