--- a/slides/index.html
+++ b/slides/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/ace-brython-customization.css">
     <link rel="stylesheet" href="css/python-repl-customization.css">
+    <link rel="stylesheet" href="css/highlightjs-customization.css">
   </head>
   <body>
     <div class="reveal">
